[build-system]
requires = [
    "setuptools<60.0",
    "wheel",
    "Cython==0.29.37",
    "numpy==1.19.5",
    "scipy==1.6.0",
]
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
